--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/node": "^7.20.7",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
